<resources>
    <string name="app_name">淘宝</string>
    <!--  登陆页面-->
    <string name="login">京东登陆</string>
    <string name="user_name">账户</string>
    <string name="user_pwd">密码</string>
    <string name="button_login">登陆</string>
    <string name="phont_login">手机快速注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="qq_login">登陆即代表您已经同意京东隐私政策</string>

    <!--  注册页面-->
    <string name="registered">京东注册</string>
    <string name="user_name_regiter">账户</string>
    <string name="user_pwd_regiter">密码</string>
    <string name="user_pwds_regiter">再次输入密码</string>
    <string name="button_login_regiter">注册</string>
    <string name="code_login">邮箱</string>

    <!--  详情页面-->
    <string name="synthesize">综合</string>
    <string name="sales_volume">销量</string>
    <string name="filtrate">筛选</string>

    <!--  购物车页面-->
    <string name="shopping_car">购物车</string>
    <string name="shopping_count">去结算(0)</string>
    <string name="shopping_xuan">全选</string>
    <string name="shopping_zong">合计：￥0.00</string>
    <string name="shopping_bian">删除</string>
    <string name="good_count">x %d</string>
    <string name="price">￥%s</string>
    <string name="total_0">合计：￥0.00</string>
    <string name="total">合计：￥%s</string>
    <string name="jiesuan_0">结算（0）</string>
    <string name="jiesuan">结算（%s）</string>
    <string name="cart_title_0">购物车(0)</string>
    <string name="cart_title">购物车(%s)</string>


    <!--  我的页面-->
    <string name="my_login">登陆/注册></string>
    <string name="user_all_order">全部订单</string>
    <string name="user_order_wait_pay">未付款</string>
    <string name="user_order_wait_drive">待发货</string>
    <string name="user_order_wait_receipt">待收货</string>
    <string name="user_order_wait_comment">待评价</string>
    <string name="user_order_wait_refund">退款/货</string>

    <string name="user_property">我的财产</string>
    <string name="user_property_money">预存款</string>
    <string name="user_property_card">充值卡</string>
    <string name="user_property_vouchers">代金券</string>
    <string name="user_property_red">红包</string>
    <string name="user_property_integral">积分</string>

    <string name="user_address">收货地址</string>
    <string name="user_setting">系统设置</string>
</resources>
